# synologydsm-api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: constraints.txt  release.yml  tests.yml
scripts/: setup
src/synology_dsm/: synology_dsm.py
src/synology_dsm/api/core/: utilization.py
src/synology_dsm/api/download_station/: __init__.py
src/synology_dsm/api/photos/: __init__.py
src/synology_dsm/api/surveillance_station/: __init__.py  camera.py
tests/: __init__.py  test_synology_dsm.py
tests/api_data/dsm_6/: __init__.py
tests/api_data/dsm_6/download_station/: const_6_download_station_schedule_config.py
