[tool.poetry]
name = "synologydsm-api"
version = "1.0.2"
description = "Python API for communication with Synology DSM"
authors = ["Quentin POLLET (Quentame)", "FG van Zeelst (ProtoThis)"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hacf-fr/synologydsm-api"
repository = "https://github.com/hacf-fr/synologydsm-api"
documentation = "https://github.com/hacf-fr/synologydsm-api/blob/master/README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
]
keywords=["synology-dsm", "synology"]
packages = [
    { include = "synology_dsm", from = "src" },
]

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/synologydsm-api/releases"

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.25.1"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.8"}
pre-commit = "^2.21.0"
flake8 = "^3.9.0"
black = "^21.8b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^4.0.1"
Pygments = "^2.10.0"

[tool.poetry.scripts]
synologydsm-api = "synology_dsm.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["synology_dsm"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
